Fix: adjust margin for about section to eliminate top spacing; enhance layout consistency

--- a/css/media-part-1.css
+++ b/css/media-part-1.css
@@ -89,6 +89,9 @@
         height: 3px;
         background-color: #9747ff;
     }
+    .about {
+        margin-top: 0;
+    }
 }
 
 @media (max-width: 1360px) {
